--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -29,16 +29,16 @@
           <li class="nav-item">
             <a class="nav-link active" href="#home" aria-current="page">Home</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Location</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about-section">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#find-us">Location</a></li>
+          <li class="nav-item"><a class="nav-link" href="#menu-section">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" href="#order-section">Order</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-  <div class="hero-section" style="position: relative; width: 100vw; height: 100vh; overflow: hidden;">
+  <div id="home" class="hero-section" style="position: relative; width: 100vw; height: 100vh; overflow: hidden;">
         <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Presentation" id="hero-image" />
         <div class="hero-text-container">
           <h1 class="display-1 fw-bold text-white hero-title">Tipsy Bean</h1>
@@ -73,306 +73,81 @@
           </div>
         </div>
       </div>
-      <div class="container my-5">
+      <div class="container my-5" id="find-us">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <svg
-            class="bi mt-4 mb-3"
-            style="color: var(--bs-indigo)"
-            width="100"
-            height="100"
-            aria-hidden="true"
-          >
-            <use xlink:href="#bootstrap"></use>
-          </svg>
+          <img src="../assets/pin.png" alt="Location Pin" style="width: 80px; height: 80px; object-fit: contain; margin-bottom: 1.5rem;" />
           <h1 class="text-body-emphasis">Find Your Way To Us</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
-            This is a custom jumbotron featuring an SVG image at the top, some
-            longer text that wraps early thanks to a responsive
-            <code>.col-*</code> class, and a customized call to action.
+            Looking for your next favorite coffee spot? Use the map below to find our location and enjoy a cozy cup at Tipsy Bean. We can't wait to welcome you!
           </p>
-          <div class="d-inline-flex gap-2 mb-5">
-            <button
-              class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-              type="button"
-            >
-              Call to action
-              <svg class="bi ms-2" width="24" height="24" aria-hidden="true">
-                <use xlink:href="#arrow-right-short"></use>
+          <div class="d-flex justify-content-center mb-5">
+            <a href="https://bit.ly/3I8A1pq" class="btn-google-map btn-lg rounded-pill d-flex align-items-center gap-2" target="_blank">
+              Google Map
+              <svg class="bi ms-2" width="24" height="24" aria-hidden="true" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M16 8c0 4.418-7 8-7 8s-7-3.582-7-8a7 7 0 1 1 14 0zM8 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
               </svg>
-            </button>
-            <button
-              class="btn btn-outline-secondary btn-lg px-4 rounded-pill"
-              type="button"
-            >
-              Secondary link
-            </button>
+            </a>
           </div>
         </div>
       </div>
-      <div class="container px-4 py-5" id="custom-cards">
-        <h2 class="pb-2 border-bottom">What We Serve</h2>
-        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <!-- Card Selection Section -->
+      <section class="container my-5" id="menu-section">
+        <h2 class="text-center mb-4 fw-bold" style="color: #6f4e37;">What We Serve</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
           <div class="col">
-            <div
-              class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-              style="background-image: url('unsplash-photo-1.jpg')"
-            >
-              <div
-                class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
-              >
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  Short title, long jacket
-                </h3>
-                <ul class="d-flex list-unstyled mt-auto">
-                  <li class="me-auto">
-                    <img
-                      src="https://github.com/twbs.png"
-                      alt="Bootstrap"
-                      width="32"
-                      height="32"
-                      class="rounded-circle border border-white"
-                    />
-                  </li>
-                  <li class="d-flex align-items-center me-3">
-                    <svg
-                      class="bi me-2"
-                      width="1em"
-                      height="1em"
-                      role="img"
-                      aria-label="Location"
-                    >
-                      <use xlink:href="#geo-fill"></use>
-                    </svg>
-                    <small>Earth</small>
-                  </li>
-                  <li class="d-flex align-items-center">
-                    <svg
-                      class="bi me-2"
-                      width="1em"
-                      height="1em"
-                      role="img"
-                      aria-label="Duration"
-                    >
-                      <use xlink:href="#calendar3"></use>
-                    </svg>
-                    <small>3d</small>
-                  </li>
-                </ul>
+            <div class="card h-100 shadow-sm border-0">
+              <img src="../assets/Coffee.png" class="card-img-top card-selection-img" alt="Beverages">
+              <div class="card-body d-flex flex-column justify-content-end">
+                <h5 class="card-title text-center fw-bold" style="color: #6f4e37;">Beverages</h5>
               </div>
             </div>
           </div>
           <div class="col">
-            <div
-              class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-              style="background-image: url('unsplash-photo-2.jpg')"
-            >
-              <div
-                class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"
-              >
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  Much longer title that wraps to multiple lines
-                </h3>
-                <ul class="d-flex list-unstyled mt-auto">
-                  <li class="me-auto">
-                    <img
-                      src="https://github.com/twbs.png"
-                      alt="Bootstrap"
-                      width="32"
-                      height="32"
-                      class="rounded-circle border border-white"
-                    />
-                  </li>
-                  <li class="d-flex align-items-center me-3">
-                    <svg
-                      class="bi me-2"
-                      width="1em"
-                      height="1em"
-                      role="img"
-                      aria-label="Location"
-                    >
-                      <use xlink:href="#geo-fill"></use>
-                    </svg>
-                    <small>Pakistan</small>
-                  </li>
-                  <li class="d-flex align-items-center">
-                    <svg
-                      class="bi me-2"
-                      width="1em"
-                      height="1em"
-                      role="img"
-                      aria-label="Duration"
-                    >
-                      <use xlink:href="#calendar3"></use>
-                    </svg>
-                    <small>4d</small>
-                  </li>
-                </ul>
+            <div class="card h-100 shadow-sm border-0">
+              <img src="../assets/Pasta.png" class="card-img-top card-selection-img" alt="Food">
+              <div class="card-body d-flex flex-column justify-content-end">
+                <h5 class="card-title text-center fw-bold" style="color: #6f4e37;">Food</h5>
               </div>
             </div>
           </div>
           <div class="col">
-            <div
-              class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-              style="background-image: url('unsplash-photo-3.jpg')"
-            >
-              <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  Another longer title belongs here
-                </h3>
-                <ul class="d-flex list-unstyled mt-auto">
-                  <li class="me-auto">
-                    <img
-                      src="https://github.com/twbs.png"
-                      alt="Bootstrap"
-                      width="32"
-                      height="32"
-                      class="rounded-circle border border-white"
-                    />
-                  </li>
-                  <li class="d-flex align-items-center me-3">
-                    <svg
-                      class="bi me-2"
-                      width="1em"
-                      height="1em"
-                      role="img"
-                      aria-label="Location"
-                    >
-                      <use xlink:href="#geo-fill"></use>
-                    </svg>
-                    <small>California</small>
-                  </li>
-                  <li class="d-flex align-items-center">
-                    <svg
-                      class="bi me-2"
-                      width="1em"
-                      height="1em"
-                      role="img"
-                      aria-label="Duration"
-                    >
-                      <use xlink:href="#calendar3"></use>
-                    </svg>
-                    <small>5d</small>
-                  </li>
-                </ul>
+            <div class="card h-100 shadow-sm border-0">
+              <img src="../assets/Pastry.png" class="card-img-top card-selection-img" alt="Pastry">
+              <div class="card-body d-flex flex-column justify-content-end">
+                <h5 class="card-title text-center fw-bold" style="color: #6f4e37;">Pastry</h5>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold text-body-emphasis">
-          Bringing Goodness To Your Doorstep
-        </h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">
-            Quickly design and customize responsive mobile-first sites with
-            Bootstrap, the world’s most popular front-end open source toolkit,
-            featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.
-          </p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
-              FoodPanda
-            </button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-              GrabFood
-            </button>
+      </section>
+            <!-- Delivery Option Section -->
+  <section class="container my-5" aria-labelledby="delivery-header" id="order-section">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-12 col-md-10 col-lg-8">
+            <div class="p-4 p-md-5 rounded-4 shadow-sm text-center bg-body-tertiary">
+              <img src="../assets/DeliveryIcon.png" alt="Delivery Icon" style="width: 180px; height: 180px; object-fit: contain; margin-bottom: 1.5rem; display: block; margin-left: auto; margin-right: auto;" />
+              <h2 id="delivery-header" class="fw-bold mb-3" style="color: #6f4e37;">Bringing Goodness to You</h2>
+              <p class="lead mb-0" style="color: #6f4e37;">Order from our delivery partners and have it delivered right to your doorstep.</p>
+            </div>
           </div>
         </div>
-        <div class="overflow-hidden" style="max-height: 30vh">
-          <div class="container px-5">
-            <img
-              src="bootstrap-docs.png"
-              class="img-fluid border rounded-3 shadow-lg mb-4"
-              alt="Example image"
-              width="700"
-              height="500"
-              loading="lazy"
-            />
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <footer class="py-5">
-          <div class="row">
-            <div class="col-6 col-md-2 mb-3">
-              <h5>Section</h5>
-              <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary"
-                    >Features</a
-                  >
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary"
-                    >Pricing</a
-                  >
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-6 col-md-2 mb-3">
-              <h5>Section</h5>
-              <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary"
-                    >Features</a
-                  >
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary"
-                    >Pricing</a
-                  >
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-6 col-md-2 mb-3">
-              <h5>Section</h5>
-              <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary"
-                    >Features</a
-                  >
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary"
-                    >Pricing</a
-                  >
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-                </li>
-                <li class="nav-item mb-2">
-                  <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-                </li>
-              </ul>
-            </div>            
-          <div
-            class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
-          >
-            <p>© 2025 Company, Inc. All rights reserved.</p>
-            
+      </section>
     </main>
+    <footer class="footer-custom mt-auto py-4">
+      <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
+        <div class="mb-3 mb-md-0 text-center text-md-start" style="color: #6f4e37;">
+          &copy; 2025 Tipsy Bean. All rights reserved.
+        </div>
+        <div class="d-flex gap-3 justify-content-center">
+          <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
+            <img src="../assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
+          </a>
+          <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
+            <img src="../assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
+          </a>
+        </div>
+      </div>
+    </footer>
     <!-- ...rest of your content... -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
