--- a/TipsyBean/html/index.html
+++ b/TipsyBean/html/index.html
@@ -1,158 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <title>Tipsy Bean</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar" aria-label="Main navigation">
-        <a class="navbar-brand d-flex align-items-center" href="#">
-          <img
-            src="../assets/logo.jpeg"
-            alt="Tipsy Bean Logo"
-            style="height: 40px; margin-right: 10px; border-radius: 8px"
-          />
-          <span class="fw-bold fs-4" style="color: var(--latte-coffee, #6f4e37)"
-            >Tipsy Bean</span
-          >
-        </a>
-        <ul class="nav nav-links ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#home" aria-current="page">Home</a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="#about-section">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#find-us">Location</a></li>
-          <li class="nav-item"><a class="nav-link" href="#menu-section">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="#order-section">Order</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
-  <div id="home" class="hero-section" style="position: relative; width: 100vw; height: 100vh; overflow: hidden;">
-        <img src="../assets/CoffeeShop Interior.jpg" alt="Coffee Shop Presentation" id="hero-image" />
-        <div class="hero-text-container">
-          <h1 class="display-1 fw-bold text-white hero-title">Tipsy Bean</h1>
-          <div class="hero-caption text-white">
-            <p class="lead mb-2"><span style="color:#c19a6b;font-weight:bold;">Crafted Coffee,</span> Inspired Moments.</p>
-            <p class="lead mb-2">Experience the art of brewing in every cup.</p>
-            <p class="lead">Your destination for taste, comfort, and connection.</p>
-          </div>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tipsy Bean</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <!-- Google Fonts: Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <!-- Navigation Bar -->
+  <header>
+    <!-- Navbar Start -->
+    <nav class="navbar" id="main-navbar">
+      <div class="navbar-logo" id="navbar-logo">
+        <img src="../assets/logo.jpeg" alt="Tipsy Bean Logo" class="logo-img" id="logo-img">
       </div>
-      </section>
-  <div class="container col-xxl-8 px-4 py-5 about-section" id="about-section">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-6">
-            <img
-              src="../assets/logo.jpeg"
-              class="d-block mx-lg-auto img-fluid"
-              alt="Coffee Shop Interior"
-              width="700"
-              height="500"
-              loading="lazy"
-            />
-          </div>
-          <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
-              About us
-            </h1>
-            <p class="lead">
-              In the heart of the city, Tipsy Bean began as a dream between friends who believed every cup of coffee could spark a new story. From the aroma of freshly ground beans to the laughter echoing off brick walls, our shop became a haven for artists, thinkers, and wanderers alike.<br><br>
-              Here, every mug is a chapter, every pastry a plot twist, and every guest a cherished character in our ongoing tale. Welcome to Tipsy Bean—where your story is always brewing.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="container my-5" id="find-us">
-        <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <img src="../assets/pin.png" alt="Location Pin" style="width: 80px; height: 80px; object-fit: contain; margin-bottom: 1.5rem;" />
-          <h1 class="text-body-emphasis">Find Your Way To Us</h1>
-          <p class="col-lg-8 mx-auto fs-5 text-muted">
-            Looking for your next favorite coffee spot? Use the map below to find our location and enjoy a cozy cup at Tipsy Bean. We can't wait to welcome you!
-          </p>
-          <div class="d-flex justify-content-center mb-5">
-            <a href="https://bit.ly/3I8A1pq" class="btn-google-map btn-lg rounded-pill d-flex align-items-center gap-2" target="_blank">
-              Google Map
-              <svg class="bi ms-2" width="24" height="24" aria-hidden="true" fill="currentColor" viewBox="0 0 16 16">
-                <path d="M16 8c0 4.418-7 8-7 8s-7-3.582-7-8a7 7 0 1 1 14 0zM8 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
-              </svg>
-            </a>
-          </div>
-        </div>
-      </div>
-      <!-- Card Selection Section -->
-      <section class="container my-5" id="menu-section">
-        <h2 class="text-center mb-4 fw-bold" style="color: #6f4e37;">What We Serve</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-          <div class="col">
-            <div class="card h-100 shadow-sm border-0">
-              <img src="../assets/Coffee.png" class="card-img-top card-selection-img" alt="Beverages">
-              <div class="card-body d-flex flex-column justify-content-end">
-                <h5 class="card-title text-center fw-bold" style="color: #6f4e37;">Beverages</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100 shadow-sm border-0">
-              <img src="../assets/Pasta.png" class="card-img-top card-selection-img" alt="Food">
-              <div class="card-body d-flex flex-column justify-content-end">
-                <h5 class="card-title text-center fw-bold" style="color: #6f4e37;">Food</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card h-100 shadow-sm border-0">
-              <img src="../assets/Pastry.png" class="card-img-top card-selection-img" alt="Pastry">
-              <div class="card-body d-flex flex-column justify-content-end">
-                <h5 class="card-title text-center fw-bold" style="color: #6f4e37;">Pastry</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-            <!-- Delivery Option Section -->
-  <section class="container my-5" aria-labelledby="delivery-header" id="order-section">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-12 col-md-10 col-lg-8">
-            <div class="p-4 p-md-5 rounded-4 shadow-sm text-center bg-body-tertiary">
-              <img src="../assets/DeliveryIcon.png" alt="Delivery Icon" style="width: 180px; height: 180px; object-fit: contain; margin-bottom: 1.5rem; display: block; margin-left: auto; margin-right: auto;" />
-              <h2 id="delivery-header" class="fw-bold mb-3" style="color: #6f4e37;">Bringing Goodness to You</h2>
-              <p class="lead mb-0" style="color: #6f4e37;">Order from our delivery partners and have it delivered right to your doorstep.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer-custom mt-auto py-4">
-      <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-        <div class="mb-3 mb-md-0 text-center text-md-start" style="color: #6f4e37;">
-          &copy; 2025 Tipsy Bean. All rights reserved.
-        </div>
-        <div class="d-flex gap-3 justify-content-center">
-          <a href="https://www.facebook.com/TipsyBeanMamatid" target="_blank" rel="noopener" class="footer-icon-link">
-            <img src="../assets/FacebookIcon.png" alt="Facebook" class="footer-icon" />
-          </a>
-          <a href="https://www.instagram.com/tipsybeancabuyao/" target="_blank" rel="noopener" class="footer-icon-link">
-            <img src="../assets/InstagramIcon.png" alt="Instagram" class="footer-icon" />
-          </a>
-        </div>
-      </div>
-    </footer>
-    <!-- ...rest of your content... -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      <span class="navbar-title" id="navbar-title">Tipsy Bean</span>
+    </nav>
+    <ul class="navbar-links" id="navbar-links">
+      <li class="navbar-item"><a href="#home" class="navbar-link" id="nav-home">Home</a></li>
+      <li class="navbar-item"><a href="#about" class="navbar-link" id="nav-about">About</a></li>
+      <li class="navbar-item"><a href="#menu" class="navbar-link" id="nav-menu">Menu</a></li>
+      <li class="navbar-item"><a href="#order" class="navbar-link" id="nav-order">Order</a></li>
+    </ul>
+    </nav>
+    
+    <!-- Navbar End -->
+  </header>
+</body>
 </html>
